.k8s/remote/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: globaltickets
  labels:
    name: globaltickets
    environment: production
