.k8s/remote/customer.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer
  labels:
    app: customer
spec:
  selector:
    app: customer
  ports:
    - protocol: TCP
      port: 7000
      targetPort: 7000
      name: http
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer
  labels:
    app: customer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer
  template:
    metadata:
      labels:
        app: customer
    spec:
      containers:
        - name: customer
          image: globalticketsacr.azurecr.io/globaltickets.customer:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 7000
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
