.k8s/remote/inventory.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory
  labels:
    app: inventory
spec:
  selector:
    app: inventory
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      name: http
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory
  labels:
    app: inventory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
        - name: inventory
          image: globalticketsacr.azurecr.io/globaltickets.inventory:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
