.k8s/remote/order.yaml
apiVersion: v1
kind: Service
metadata:
  name: order
  labels:
    app: order
spec:
  selector:
    app: order
  ports:
    - protocol: TCP
      port: 6000
      targetPort: 6000
      name: http
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  labels:
    app: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: globalticketsacr.azurecr.io/globaltickets.order:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 6000
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
