.k8s/remote/ingress-caddy.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: globaltickets
  namespace: globaltickets
  annotations:
    kubernetes.io/ingress.class: caddy
spec:
  rules:
    - host: globaltickets.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8080
